# https://doc.rust-lang.org/cargo/reference/workspaces.html

[workspace]
members = ["trading-okx"]

[workspace.package]
version = "0.1.0"
rust-version = "1.70.0"
license = "MIT"

[workspace.dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

tracing = "0.1.37"
tracing-subscriber = "0.3.17"

clap = "4.4.2"
