# https://doc.rust-lang.org/cargo/reference/workspaces.html

[workspace]
members = ["trading-okx", "coin-glass"]
resolver = "2"

[workspace.package]
version = "0.1.0"
rust-version = "1.70.0"
license = "MIT"
edition = "2021"

[workspace.dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.106"

tracing = "0.1.37"
tracing-subscriber = "0.3.17"

clap = "4.4.2"

anyhow = "1.0.75"

chrono = "0.4.30"

hmac = "0.12.1"
sha2 = "0.10.7"
base64 = "0.21.4"
