[package]
name = "coin-glass"
version.workspace = true
rust-version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
chrono.workspace = true
tokio = { workspace = true }
toml = "0.8.0"
lazy_static = "1.4.0"
