[package]
name = "trading-okx"
version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { version = "1.0.188", features = ["derive"] }
lazy_static = "1.4.0"
toml = "0.7.7"
anyhow.workspace = true
