[package]
name = "trading-okx"
version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { version = "1.0.188", features = ["derive"] }
lazy_static = "1.4.0"
toml = "0.8.0"
anyhow.workspace = true
chrono.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
serde_json.workspace = true
